# fastapi-ml-app

./: Dockerfile  README.md  docker-compose.yml  main.py  model.py  pyproject.toml
