[tool.poetry]
name = "fastapi-ml-app"
version = "0.1.0"
description = ""
authors = ["RAJerez <rodrigoagustin23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
pillow = "^10.3.0"
python-multipart = "^0.0.9"
torch = "^2.3.0"
transformers = "^4.41.2"
ipykernel = "^6.29.4"
uvicorn = {extras = ["standard"], version = "^0.30.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
